--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'idea'
     id 'eclipse'
+    id "io.freefair.lombok" version "4.1.6"
 }
 
 subprojects {
@@ -14,6 +15,7 @@ subprojects {
     dependencies {
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+        testCompile 'org.assertj:assertj-core:3.11.1'
     }
 
     test {
