--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = projectname
 
 include 'kata-anagrams'
+include 'kata-titlecase'
 
 rootProject.children.each { subproject ->
     subproject.buildFileName = "${subproject.name}.gradle"
