--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ rootProject.name = projectname
 include 'kata-anagrams'
 include 'kata-titlecase'
 include 'kata-countingcode'
+include 'kata-rome'
 
 rootProject.children.each { subproject ->
     subproject.buildFileName = "${subproject.name}.gradle"
