--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 projectname=codekata
 projectgroup=de.hbt.fobi
-projectSourceCompatibility=1.8
+projectSourceCompatibility=11
 org.gradle.daemon=true
 org.gradle.configureondemand=true
 org.gradle.jvmargs=-Xmx4g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
