+ use testNG + introduce newKata script + add template

--- a/build.gradle
+++ b/build.gradle
@@ -8,19 +8,16 @@ subprojects {
     apply plugin: 'idea'
     apply plugin: 'eclipse'
     apply plugin: 'java-library'
+    apply from: '../gradle/testing.gradle'
 
     sourceCompatibility = projectSourceCompatibility
     targetCompatibility = projectSourceCompatibility
 
     dependencies {
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
-        testImplementation 'org.assertj:assertj-core:3.11.1'
+        testImplementation 'org.testng:testng:7.+'
+        testImplementation "org.assertj:assertj-core:3.18.+"
     }
 
-    test {
-        useJUnitPlatform()
-    }
 }
 
 allprojects {
